<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.keyboardape.newwestminsteranalyticsapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/progress_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/progress_description"
        android:textSize="12sp" />

    <ListView
        android:id="@+id/downloadList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:listSelector="@android:color/transparent"/>

    <Button
        android:id="@+id/btnViewMaps"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_maps"
        android:onClick="onClickViewMaps"/>

    <Button
        android:id="@+id/btnViewCharts"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_charts"
        android:onClick="onClickViewCharts"/>

    <!--<Button-->
        <!--android:id="@+id/btnViewDemographics"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="View Demographics"-->
        <!--android:onClick="onClickViewDemographics"/>-->

</LinearLayout>
